[package]
name = "print-calltrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
goblin = "0.8.0"
libc = "0.2.153"
linux-personality = "1.0.0"
nix = { version = "0.28.0", features = ["process", "ptrace"] }
